# vulkan-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
engine/: CMakeLists.txt  DrawCommand.cpp  DrawCommand.h  TransferHandler.h  asynctransferhandler.cpp  asynctransferhandler.h  defaultuniform.cpp  defaultuniform.h  depthstencil.cpp  depthstencil.h  engine.cpp  engine.h  gamestate.cpp  gamestate.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  transferhandler.cpp  vulkancontext.cpp  vulkancontext.h
engine/models/: bruh.fbx  ground.fbx
engine/scenes/: scene.json
engine/shaders/: default.frag  default.vert
